<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarpoolXpress</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recherche_parcours">Recherche de parcours</string>
    <string name="passager">Passager</string>
    <string name="conducteur">Conducteur</string>
    <string name="point_depart_holder">Votre point de départ...</string>
    <string name="point_arrivee_holder">Votre point d\'arrivée...</string>
    <string name="point_depart">Point de départ</string>
    <string name="point_arrivee">Point d\'arrivée</string>
    <string name="date_label">Date</string>
    <string name="time_label">Heure</string>
    <string name="date_holder">JJ / MM / AAAA</string>
    <string name="heure_holder">HH : MM</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="titreDate">Choix de date</string>
    <string name="titreHeure">Choix d\'heure</string>
    <string name="rechercher">Rechercher</string>
    <string name="ajouter_depart">Ajouter ce départ</string>
    <string name="title_activity_recherche_passagers">Résultats</string>
    <string name="title_activity_departs_conducteur">Départs</string>
    <string name="confmotdepasse">Confirmation de mot de passe</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="adresse">Adresse</string>
    <string name="option_artistes">Artistes</string>
    <string name="option_albums">Albums</string>
    <string name="option_genres">Genres</string>
    <string name="option_playlists">Playlists</string>
    <string name="drawer_open">Tiroir ouvert</string>
    <string name="drawer_close">Tiroir fermé</string>
    <string name="menu_reinitialisation">Reinitialiser</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="modifier">Modifier un départ</string>
    <string name="departs_titre">Liste des départs</string>
    <string name="resultats_recherche">Départs trouvés</string>
    <string name="lbl_nb_places">Nombre de places :</string>
    <string name="title_activity_key_google">Map</string>
    <string name="coord_depart">Point de départ :</string>
    <string name="coord_arrivee">Point d\'arrivée :</string>
    <string name="ok">Ok</string>
    <string name="titre_offre">Titre :</string>
    <string name="modifier_depart">Modifier le départ</string>
    <string name="depart_modifie">Départ modifié avec succès</string>
    <string name="place_holder_depart">Cliquez sur la map et tenez enfoncé.</string>
    <string name="ajouter_element">Ajouter</string>
    <string name="login_error">Informations incorrectes.</string>
    <string name="erreur_recherche">Erreur lors de la recherche.</string>
    <string name="erreur_ajout">Erreur lors de l\'ajout du parcours</string>
    <string name="question_mark">"\u003f"</string>
    <string name="offres">Mes offres</string>
    <string name="erreur_modif">Erreur lors de la modification de l\'offre</string>
    <string name="erreur_suppression">Erreur lors de la suppression du parcours</string>
    <string name="title_activity_consultation_offre">Consultation d\'une offre</string>
    <string name="envoi_demande">Envoyer une demande pour cette offre</string>
    <string name="titleNotif">Demande d\'embarquement</string>
    <string name="statusBarNotif">Nouvelle demande CarpoolXpress</string>
    <string name="title_activity_confirmation_demande">Confirmation d\'une demande</string>
    <string name="msg_alarm_receiver">Nouvelle demande d\'embarquement</string>
    <string name="title_activity_liste_demande">Liste des demandes</string>
    <string name="erreur_demandes">Erreur lors de la récupération des demandes</string>
    <string name="confirmation_demande">Demande acceptée!</string>
    <string name="refus_demande">Demande refusée!</string>
    <string name="accepter">Accepter la demande</string>
    <string name="erreur_envoi_demande">Erreur lors de l\'envoi de la demande</string>
    <string name="succes_envoi_demande">Demande envoyée avec succès!</string>
    <string name="mes_demandes">Liste des demandes</string>
    <string name="erreur_suppression_demande">Erreur lors de l\'opération</string>
    <string name="distance_offre">Distance entre les 2 points :</string>
    <string name="refuser">Refuser la demande</string>
    <string name="lbl_noms_passagers">Noms des passagers :</string>
    <string name="no_passagers">Aucun passager</string>
    <string name="test">ca marche</string>
    <string name="aide">Aide interactive</string>

</resources>
