<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:icon="@drawable/ic_action_overflow" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="always" />

    <item android:id="@+id/menu_deconnexion" android:title="@string/deconnexion" app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/mes_offres" android:title="@string/offres" app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/mes_demandes" android:title="@string/mes_demandes" app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/aide_interactive_main" android:title="@string/aide" app:showAsAction="never"/>

</menu>
