<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="match_parent" android:id="@+id/map"
            tools:context="carpoolxpress.cours03e.dinfogarneau.com.carpoolxpress.google_key.KeyGoogle"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/distance_offre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_distance"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/titre_offre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/txt_titre_offre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/coord_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/place_holder_depart"
                    android:id="@+id/txt_coord_depart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/coord_arrivee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/place_holder_depart"
                    android:id="@+id/txt_coord_arrivee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/date_label"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_date_conducteur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/date_holder"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/time_label"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_heure_conducteur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/heure_holder"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:text="@string/lbl_nb_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/txt_nb_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp">
            </EditText>

            <Button
                android:id="@+id/btn_ajouter_depart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/ajouter_depart"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>