<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="match_parent" android:id="@+id/map"
            tools:context="carpoolxpress.cours03e.dinfogarneau.com.carpoolxpress.google_key.KeyGoogle"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/distance_offre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_distance"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/date_label"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_date_passager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/date_holder"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_recherche_passager"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/rechercher"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>