<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="match_parent" android:id="@+id/map"
            tools:context="carpoolxpress.cours03e.dinfogarneau.com.carpoolxpress.google_key.KeyGoogle"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/distance_offre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_distance"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/date_label"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_date_offre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/time_label"
                        android:textAlignment="center"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_heure_offre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/lbl_nb_places"
                        android:textAlignment="center"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_nb_places"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_passagers"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/lbl_noms_passagers"
                        android:textAlignment="center"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lbl_noms_passagers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_envoi_demande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/envoi_demande">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>